@@ -82,6 +82,7 @@ v 8.13.0 (unreleased)
   - Add Container Registry on/off status to Admin Area !6638 (the-undefined)
   - Grouped pipeline dropdown is a scrollable container
   - Fix a typo in doc/api/labels.md
+  - API: all unknown routing will be handled with 400 Bad Request
 
 v 8.12.5 (unreleased)
 
